# echo-assigner

./: README.md  pyproject.toml  requirements.txt
src/domain/DataBaseMidi/: entity.py  value_object.py
src/domain/InputMidi/: entity.py  value_object.py
src/echo_assigner/: __init__.py
