[project]
name = "echo-assigner"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pdmuds4", email = "ryosuke3191@gmail.com" }
]
dependencies = [
    "ipython>=8.25.0",
    "matplotlib>=3.9.0",
    "mido>=1.3.2",
    "music21>=9.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.2",
    "pygame>=2.5.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scipy>=1.13.1",
    "supabase>=2.5.1",
    "keras>=3.3.3",
    "keras-metrics>=1.1.0",
    "tensorflow>=2.16.1",
    "tqdm>=4.66.4",
    "samplings>=0.1.7",
    "pydantic>=2.7.4",
    "injector>=0.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.10",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/echo_assigner"]

[project.scripts]
hello = "echo_assigner:hello